<resources>
    <string name="app_name">KinderKit</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="place_holder">kid</string>
    <string name="title">KinderKit</string>
    <string name="kinderKit">KinderKit</string>
    <string name="last_name">Add Last Name</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="add_kid">Add Kid</string>
    <string name="first_name">Add First Name</string>
    <string name="choose_birth_date">Choose Birth Date:</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="bDate">Date Of Birth:</string>
    <string name="delete_kid">Delete Kid</string>
    <string name="open_gallery">Gallery</string>
    <string name="Immunization_record">Immunization Record</string>
    <string name="events">Events</string>
    <string name="gallery_title">Kid\'s Gallery</string>
    <string name="event_title">Kid\'s Events</string>
    <string name="delete">Delete</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="add_event">Add Event</string>
    <string name="add_photo">Add Photo</string>
    <string name="immunizations">Immunizations</string>
    <string name="add_record">Add Record</string>
    <string name="vaccine_name">Vaccine Name:</string>
    <string name="dose_number">Dose Number:</string>
    <string name="vaccinator_name">Vaccinator/Doctor Name:</string>
    <string name="hmo_name">HMO Name:</string>
    <string name="company_name">Company Name:</string>
    <string name="date">Date:</string>
    <string name="add_new_record">Add New Record</string>
    <string name="vaccination_date">Vaccination Date:</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_title_name">Event Title</string>
    <string name="set_as_profile_picture">Set As Profile Picture</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="babysitting_service">Babysitting Service</string>
    <string name="create_account">Create account</string>
    <string name="kinderkit">KinderKit</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">I Don\'t have an account</string>
    <string name="add_new_kid">Add New Kid</string>
    <string name="list_of_babysitters">List of Babysitters</string>
    <string name="sort_by">Sort by:</string>
    <string name="babysitting_services">Babysitting Service</string>

</resources>