<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AddActivities.AddRecordActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/immunization_background" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/AR_SIV_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/GA_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#DDF6E4"
        android:padding="10dp"
        android:text="@string/add_new_record"
        android:textColor="#0AA0FA"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/GA_MTV_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#C6FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/AR_ET_vaccineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vaccine_name" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/AR_ET_vaccinatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/vaccinator_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/AR_ET_HMOName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/hmo_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/AR_ET_creatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/AR_ET_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="#CDD40EEA"
            android:paddingHorizontal="10dp"
            android:text="@string/vaccination_date"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AR_MB_add_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:backgroundTint="#069C15"
            android:padding="20dp"
            android:text="@string/add_record"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>