<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AddActivities.AddEventActivity">
    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/addeventbackground" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/GA_SIV_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/GA_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#DDF6E4"
        android:padding="10dp"
        android:text="@string/add_new_event"
        android:textColor="#0AA0FA"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/AE_LLC_eventDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GA_MTV_title"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#E1FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/AE_ET_eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title_name" />

        <DatePicker
            android:id="@+id/AE_MDP_eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="35dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AR_MB_add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AE_LLC_eventDetails"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="#069C15"
        android:padding="20dp"
        android:text="@string/add_event"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>