<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LoginActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="center"
        android:src="@drawable/logging_background" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:paddingTop="60dp"
        android:text="@string/kinderkit"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- Foreground Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <TextView
                android:id="@+id/alreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/i_don_t_have_an_account"
                android:textColor="#15BF1E"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#52BD17"
                android:elevation="2dp"
                android:text="@string/login"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
